# Real_time_VAD

./: README.md  rtvad_crash.txt  settings.gradle
app/: build.gradle
app/src/main/cpp/: AudioConfig.h  AudioPipeline.cpp  AudioPipeline.h  CMakeLists.txt  FIRFilter.c  FIRFilter.h  FeatureExtractor.cpp  FeatureExtractor.h  RingBuffer.h  SuperpoweredIO.cpp  SuperpoweredIO.h  filterCoefficients.h  native-lib.cpp
app/src/main/cpp/superpowered/OpenSource/: SuperpoweredIOSAudioIO.mm
app/src/main/cpp/superpowered/libSuperpoweredAudio.xcframework/: Info.plist
app/src/main/cpp/superpowered/libWindows/: SuperpoweredWin141_Debug_MD_x86.lib  SuperpoweredWin141_Debug_MT_x86.lib  SuperpoweredWin141_Release_MD_x64.lib  SuperpoweredWin141_Release_MD_x86.lib  SuperpoweredWin141_Release_MT_x64.lib  SuperpoweredWin141_Release_MT_x86.lib  SuperpoweredWin142_Debug_MD_x86.lib  SuperpoweredWin142_Debug_MT_x86.lib  SuperpoweredWin142_Release_MD_x64.lib  SuperpoweredWin142_Release_MD_x86.lib  SuperpoweredWin142_Release_MT_x64.lib  SuperpoweredWin142_Release_MT_x86.lib  SuperpoweredWin143_Debug_MD_x86.lib  SuperpoweredWin143_Debug_MT_x86.lib  SuperpoweredWin143_Release_MD_ARM64.lib  SuperpoweredWin143_Release_MD_x64.lib  SuperpoweredWin143_Release_MD_x86.lib  SuperpoweredWin143_Release_MT_ARM64.lib  SuperpoweredWin143_Release_MT_x64.lib  SuperpoweredWin143_Release_MT_x86.lib  SuperpoweredWinUWP_Release_ARM.lib  SuperpoweredWinUWP_Release_ARM64.lib  SuperpoweredWinUWP_Release_x64.lib  SuperpoweredWinUWP_Release_x86.lib
gradle/wrapper/: gradle-wrapper.properties
(+15 files in other folders)
